tests/negative/map_oob_get.sans
main() {
  m = M<S I>{}
  m["a"] = 1
  x = m["missing"]
  p(itos(x))
}
